--- a/README.Rmd
+++ b/README.Rmd
@@ -1,10 +1,7 @@
 ---
 output: 
-    html_document:
-        keep_md: yes
+    github_document:
         toc: true
-        toc_float: true
-        collapsed: FALSE
         toc_depth: 3
 ---
 
