--- a/R/002_data_sanity_checks.Rmd
+++ b/R/002_data_sanity_checks.Rmd
@@ -30,9 +30,11 @@ files_to_check <- dir(path)
 DEL <- paste0(path, '/DEL.csv')
 SOS <- paste0(path, '/SOS.csv')
 WAQ <- paste0(path, '/WAQ.csv')
+GND <- paste0(path, '/GND.csv')
+PAD <- paste0(path, '/PAD.csv')
 
 ##########################################
-file_to_read <- WAQ
+file_to_read <- PAD
 ##########################################
 
 dat <- read_csv(file_to_read)
