--- a/R/005_rate_calculations.Rmd
+++ b/R/005_rate_calculations.Rmd
@@ -235,9 +235,9 @@ To visualize confidence intervals; because calculated SLR rate also has a standa
 ggplot() +
     geom_blank(data = rates_elev_set, aes(x = set_id, y = rate_mm.yr_set)) +
     geom_ribbon(aes(x = 0:(nrow(rates_elev_set)+1), ymin = slr-slr_ci, ymax = slr+slr_ci), fill = "navyblue", alpha = 0.1) +
-    geom_hline(aes(yintercept = slr), col = "navyblue", size = 1) +
+    geom_hline(aes(yintercept = slr), col = "navyblue", size = 1, alpha = 0.9) +
     geom_errorbar(data = rates_elev_set, aes(x = set_id, ymin = CI95_low, ymax = CI95_high), col = "gray55", size = 1) +
-    geom_point(data = rates_elev_set, aes(x = set_id, y = rate_mm.yr_set), size = 3, col = "tomato3") +
+    geom_point(data = rates_elev_set, aes(x = set_id, y = rate_mm.yr_set), size = 3, col = "red3") +
     theme_classic() + 
     labs(title = "Elevation Change, 95% Confidence Intervals", subtitle = paste0("Local SLR in blue: ", slr, " +/- ", slr_ci, " mm/yr"), x = "SET", y = "Rate of change (mm/yr)") +
     coord_flip()
