--- a/R/005_rate_calculations.Rmd
+++ b/R/005_rate_calculations.Rmd
@@ -25,10 +25,12 @@ Note that, provided no data are missing, this rate is the same as the rate gener
 The following R packages are required to generate this report:  
 
 ```{r load_libraries, echo = TRUE}
+library(knitr)
 library(readr)
 library(dplyr)
 library(tidyr)
 library(ggplot2)
+library(nlme)
 library(broom)
 library(here)
 funs_path <- here::here('R', '000_functions.R')
@@ -42,7 +44,7 @@ This reads in the long dataset, converted from other formats by earlier scripts.
 
 ```{r read_data}
 path <- here::here('data/intermediate')
-dat <- read_csv(paste0(path, '/APA.csv'))
+dat <- read_csv(paste0(path, '/GND.csv'))
 
 # make sure pin heights are in mm
 dat <- height_to_mm(dat)
@@ -59,8 +61,8 @@ Other reserve-specific inputs here (e.g., NAVD-88 heights of SET receivers; loca
 
 ```{r}
 # local rate of sea level rise, in mm/yr
-slr <- 2.23
-slr_ci <- 0.64
+slr <- 3.61
+slr_ci <- 0.59
 ```
 
 
@@ -236,4 +238,116 @@ ggplot() +
     coord_flip()
 ```
 
+
+***
+***
+
+# Linear Mixed Models  
+
+Some experimentation with linear mixed models for rate. From Cahoon et al. 2018:
+
+Linear mixed models (LMMs, Zuur et al. 2009) were chosen
+to analyze the surface elevation data. LMMs are ideal for
+analyzing the nested longitudinal data that is produced by
+the SET device. Rather than averaging the pin heights from
+each SET prior to analysis, the measurements from each pin
+are used as separate replicates. This preserves the variation
+found within each SET and also maximizes statistical power.
+Effects which are specific to each SET, direction within each
+SET, and pin within each direction are treated as random
+effects, which account for the lack of independence among
+pins on the same SET. Analysis was performed using
+mixed-effect models in the nlme package (Pinheiro et al.
+2016) in R version 3.3.2 (R Core Team 2016).
+Data from each of the five sites were analyzed separately.
+Pin height (m, NAVD88) served as the response variable, and
+the fixed effects were the number of days since the initial
+reading was taken. To account for a potential reduction of
+independence among pins on the same SET, the model included
+a random slope and intercept for each pin, nested in the SET
+position on the benchmark (typically, four positions were read
+during each sampling event), nested in the SET. This model
+was first fit using maximum likelihood. It was then compared
+to a model with identical random effects but an intercept-only
+fixed effect using the corrected form of Akaike’s information
+criterion (AICc, Akaike 1974, Burnham and Anderson 2004).
+If the intercept-only model was superior, this indicated that
+there is no trend in elevation over time. The model including
+a trend through time was then refit using restricted maximum
+likelihood to estimate the coefficients of the regression. For
+comparative purposes, this was done even in cases where the
+intercept-only model was superior.
+
+
+So in our case, we have, for each SET:  
+
++  response variable: pin_height  
++  fixed effect: date  
++  random effects: arm_position, pin_number  (note, these are nested)  
+
+### Pull out one SET to experiment  
+
+```{r}
+test <- dat %>%
+    filter(set_id == unique(set_id)[1])
+```
+
+### model  
+
+```{r}
+modelrate <- lme(pin_height ~ date, data = test, random = ~1|arm_position/pin_number, na.action = na.omit)
+summary(modelrate)
+```
+
+### pull out the rate result  
+
+```{r}
+model_mm.d <- modelrate$coefficients$fixed[2]
+model_mm.yr <- model_mm.d * 365.25
+model_mm.yr
+model_se_mm.d <- modelrate$coefficients
+```
+
+```{r}
+model_mm.d <- summary(modelrate)$tTable[2, 1]
+model_se_mm.d <- summary(modelrate)$tTable[2, 2]
+
+model_mm.yr <- model_mm.d * 365.25
+model_se_mm.yr <- model_se_mm.d * 365.25
+```
+
+For `r unique(dat$set_id)[1]`, the overall calculated rate of change is `r model_mm.yr` with a standard error of `r model_se_mm.yr`.
+
+95% CI is then: ( `r model_mm.yr - 1.96*model_se_mm.yr` , `r model_mm.yr + 1.96*model_se_mm.yr`)
+
+
+Can you use broom with lme?
+
+```{r}
+models2 <- dat %>%
+    group_by(reserve, set_id) %>%
+    do(mod = lme(pin_height ~ date, data = ., random = ~1|arm_position/pin_number, na.action = na.omit)) 
+```
+
+```{r}
+modelcoef2 <- tidy(models2, mod, effects = "fixed", conf.int=TRUE, conf.level=0.95) %>%
+    filter(term == "date") %>%
+    mutate(rate_mm.yr = estimate*365.25,
+           se_mm.yr = std.error*365.25,
+           CIlow_mm.yr = rate_mm.yr - 1.96*se_mm.yr,
+           CIhigh_mm.yr = rate_mm.yr + 1.96*se_mm.yr,
+           p_value = round(p.value, 4),
+           statistic = round(statistic, 3)) %>%
+    select(reserve, set_id, rate_mm.yr, se_mm.yr, CIlow_mm.yr, CIhigh_mm.yr, statistic, p_value)
+
+kable(modelcoef2, caption = "lme estimates of change by SET", 
+      digits = 3,
+      align = 'c')
+```
+
+See other stuff produced by the models:  
+
+```{r}
+kable(glance(models2, mod))
+```
 
